--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
