--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
